Closed
Bug 1884107
Opened 2 years ago
Closed 2 years ago
Perma /builds/worker/checkouts/gecko/ipc/glue/GeckoChildProcessHost.cpp(270,8): error: private field 'mUseSandbox' is not used [-Werror,-Wunused-private-field]
Categories
(Core :: IPC, defect, P5)
Core
IPC
Tracking
()
RESOLVED
FIXED
125 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox123 | --- | unaffected |
| firefox124 | --- | unaffected |
| firefox125 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: rkraesig)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
Details |
Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=449911285&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/JlE944cRQFCqjvxqJGN-1A/runs/0/artifacts/public/logs/live_backing.log
[task 2024-03-07T11:20:44.428Z] 11:20:44 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/ipc/glue'
[task 2024-03-07T11:20:44.432Z] 11:20:44 INFO - /builds/worker/fetches/clang/bin/clang-cl -fms-compatibility-version=19.39 -Xclang -std=c++17 -Xclang -ivfsoverlay -Xclang /builds/worker/fetches/vs/overlay.yaml -FoUnified_cpp_ipc_glue0.obj -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -guard:cf -D_FORTIFY_SOURCE=0 -Xclang -fno-common -DNDEBUG=1 -DTRIMMED=1 -DHAVE_UINT64_T -DWEBRTC_MOZILLA_BUILD -DRTC_ENABLE_VP9 -DWEBRTC_WIN -DRTC_ENABLE_WIN_WGC -DHAVE_WINSOCK2_H -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN '-DMOZ_CHILD_PROCESS_NAME="plugin-container.exe"' '-DMOZ_CHILD_PROCESS_BUNDLENAME="plugin-container.app"' '-DMOZ_EME_PROCESS_NAME_BRANDED="Firefox Nightly Media Plugin Helper"' '-DMOZ_EME_PROCESS_BUNDLENAME="media-plugin-helper.app"' -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/ipc/glue -I/builds/worker/workspace/obj-build/ipc/glue -I/builds/worker/checkouts/gecko/caps -I/builds/worker/checkouts/gecko/dom/broadcastchannel -I/builds/worker/checkouts/gecko/dom/indexedDB -I/builds/worker/checkouts/gecko/dom/storage -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/third_party/libwebrtc -I/builds/worker/checkouts/gecko/third_party/libwebrtc/third_party/abseil-cpp -I/builds/worker/checkouts/gecko/tools/fuzzing/ipc -I/builds/worker/checkouts/gecko/xpcom/build -I/builds/worker/checkouts/gecko/dom/ipc -I/builds/worker/checkouts/gecko/toolkit/crashreporter -I/builds/worker/checkouts/gecko/toolkit/xre -I/builds/worker/checkouts/gecko/xpcom/base -I/builds/worker/checkouts/gecko/xpcom/threads -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -MD -FI /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -fsanitize=address -fsanitize-blacklist=/builds/worker/checkouts/gecko/build/sanitizers/asan_blacklist_win.txt -fcrash-diagnostics-dir=/builds/worker/artifacts -fcrash-diagnostics-dir=/builds/worker/artifacts -fcrash-diagnostics-dir=/builds/worker/artifacts -TP -Zc:sizedDealloc- -D_HAS_EXCEPTIONS=0 -Gy -Zc:inline -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING -GR- -Z7 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -gline-tables-only -Oy- -Werror -W3 -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wvolatile -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wno-unknown-pragmas -Wno-ignored-pragmas -Wno-deprecated-declarations -Wno-microsoft-enum-value -Wno-microsoft-include -Wno-invalid-noreturn -Wno-inconsistent-missing-override -Wno-implicit-exception-spec-mismatch -Wno-microsoft-exception-spec -Wno-unused-local-typedef -Wno-ignored-attributes -Wno-used-but-marked-unused -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-vla-cxx-extension -Wno-unknown-warning-option -fno-strict-aliasing -Xclang -ffp-contract=off -Xclang -MP -Xclang -dependency-file -Xclang .deps/Unified_cpp_ipc_glue0.obj.pp -Xclang -MT -Xclang Unified_cpp_ipc_glue0.obj Unified_cpp_ipc_glue0.cpp
[task 2024-03-07T11:20:44.432Z] 11:20:44 INFO - In file included from Unified_cpp_ipc_glue0.cpp:92:
[task 2024-03-07T11:20:44.433Z] 11:20:44 ERROR - /builds/worker/checkouts/gecko/ipc/glue/GeckoChildProcessHost.cpp(270,8): error: private field 'mUseSandbox' is not used [-Werror,-Wunused-private-field]
[task 2024-03-07T11:20:44.433Z] 11:20:44 INFO - 270 | bool mUseSandbox = false;
[task 2024-03-07T11:20:44.434Z] 11:20:44 INFO - | ^
[task 2024-03-07T11:20:44.434Z] 11:20:44 INFO - 1 error generated.
[task 2024-03-07T11:20:44.434Z] 11:20:44 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:689: Unified_cpp_ipc_glue0.obj] Error 1
[task 2024-03-07T11:20:44.435Z] 11:20:44 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/ipc/glue'
[task 2024-03-07T11:20:44.435Z] 11:20:44 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/ipc/glue'
[task 2024-03-07T11:20:44.435Z] 11:20:44 INFO - ipc/glue/Unified_cpp_ipc_glue4.obj
Updated•2 years ago
|
Flags: needinfo?(rkraesig)
Flags: needinfo?(choller)
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1878993
:rkraesig, since you are the author of the regressor, bug 1878993, could you take a look?
For more information, please visit BugBot documentation.
status-firefox123:
--- → unaffected
status-firefox124:
--- → unaffected
status-firefox125:
--- → affected
status-firefox-esr115:
--- → unaffected
Flags: needinfo?(rkraesig)
| Assignee | ||
Comment 2•2 years ago
|
||
Minor cleanup performed during bug 1878993 revealed this issue.
Updated•2 years ago
|
Assignee: nobody → rkraesig
Status: NEW → ASSIGNED
| Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(rkraesig)
Pushed by rkraesig@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/704176a9795e
conditionalize private variable mUseSandbox r=ipc-reviewers,mccr8
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
| Comment hidden (Intermittent Failures Robot) |
Updated•2 years ago
|
Flags: needinfo?(choller)
You need to log in
before you can comment on or make changes to this bug.
Description
•