Bug 1884107 - conditionalize private variable mUseSandbox  r=ipc-reviewers,mccr8

Minor cleanup performed during bug 1878993 revealed this issue.

Differential Revision: https://phabricator.services.mozilla.com/D203925